externals/yac/mtime/include/mtime_datetime.h

/**
 * @struct _datetime
 *
 * @brief struct _datetime contains a struct _date and a struct _time element. 
 */

struct _datetime
{
  struct _date date;	///< Date elements.
  struct _time time;	///< Time elements.
};
int
getNoOfDaysInMonthDateTime(struct _datetime* dt);
int
getNoOfDaysInYearDateTime(struct _datetime* dt);
/*! \endcond */

int
getDayOfYearFromDateTime(struct _datetime* currentdt);
struct _julianday*
getJulianDayFromDateTime(struct _datetime* dt, struct _julianday* jd);