externals/mtime/include/mtime_timedelta.h

struct _julianday;
/**
 * @struct _timedelta
 *
 * @brief Struct _timedelta containing timedelta and sign of year parameter. 
 */

struct _timedelta
{
  int          flag_std_form; ///< Is timedelta formatted in standard form (eg. PT30M10S) or long form (eg. PT3000S)? 
  char 		sign;	///< sign of time delta. Sign can be '+' or '-'.

  int64_t 	year;	///< Year part of timedelta.
  int 		month;	///< Month part of timedelta.
  int 		day;	///< Day part of timedelta.
  int 		hour;	///< Hour part of timedelta.
  int 		minute;	///< Minute part of timedelta.
  int 		second;	///< Second part of timedelta.
  int 		ms;	///< Milli-Second part of timedelta.
};
/**
 * @struct _divisionquotienttimespan
 *
 * @brief Struct _divisionquotienttimespan is used for storing division of two time-delta results. 
 */

struct _divisionquotienttimespan
{
  int64_t quotient;          ///< Quotient of two timedeltas.
  int64_t remainder_in_ms;   ///< Remainder in milli seconds of two timedeltas division.
};
struct _timedelta*
newTimeDelta(const char* timedelta_string);
void
deallocateTimeDelta(struct _timedelta* td);
struct _divisionquotienttimespan*
divideDatetimeDifferenceInSeconds(struct _datetime* dt1, struct _datetime* dt2, struct _timedelta* divisor, struct _divisionquotienttimespan* quo_ret);
char*
timedeltaToString(struct _timedelta * td, char *toString);
struct _datetime*
addTimeDeltaToDateTime(struct _datetime* dt, struct _timedelta* td, struct _datetime* dt_return);