icon-model/build/verification/externals/mtime/python/mtime/_mtime.py


getNoOfDaysInMonthDateTime = __mtime.getNoOfDaysInMonthDateTime
getNoOfDaysInMonthDateTime.argtype = [POINTER(_datetime)]
getNoOfDaysInMonthDateTime.restype = c_int


getNoOfDaysInYearDateTime = __mtime.getNoOfDaysInYearDateTime
getNoOfDaysInYearDateTime.argtype = [POINTER(_datetime)]
getNoOfDaysInYearDateTime.restype = c_int


getDayOfYearFromDateTime = __mtime.getDayOfYearFromDateTime
getDayOfYearFromDateTime.argtype = [POINTER(_datetime)]
getDayOfYearFromDateTime.restype = c_int


getJulianDayFromDateTime = __mtime.getJulianDayFromDateTime
getJulianDayFromDateTime.argtype = [POINTER(_datetime), POINTER(_julianday)]
getJulianDayFromDateTime.restype = POINTER(_julianday)


# @package mtime_timedelta
#
# @brief TimeDelta and some operations supported on TimeDelta.
#
# @details
#
# @author  Luis Kornblueh, Max Planck Institute for Meteorology
# @author  Rahul Sinha, Max Planck Institute for Meteorology

# provides a string length for toString
max_timedelta_str_len = c_int(32).value


class _timedelta(Structure):
    _fields_ = [
        ("sign", c_char),
        ("year", c_long),
        ("month", c_int),
        ("day", c_int),
        ("hour", c_int),
        ("minute", c_int),
        ("second", c_int),
        ("ms", c_int),
    ]


newTimeDelta = __mtime.newTimeDelta
newTimeDelta.argtype = [c_char_p]
newTimeDelta.restype = POINTER(_timedelta)


deallocateTimeDelta = __mtime.deallocateTimeDelta
deallocateTimeDelta.argtype = [POINTER(_timedelta)]
deallocateTimeDelta.restype = None


addTimeDeltaToDateTime = __mtime.addTimeDeltaToDateTime
addTimeDeltaToDateTime.argtype = [
    POINTER(_datetime),
    POINTER(_timedelta),
    POINTER(_datetime),
]
addTimeDeltaToDateTime.restype = POINTER(_datetime)


my_timedeltaToString = __mtime.timedeltaToString
my_timedeltaToString.argtype = [POINTER(_timedelta), c_char_p]
my_timedeltaToString.restype = c_char_p


def timedeltaToString(td):
    name = create_string_buffer(b" ", max_timedelta_str_len)
    my_timedeltaToString(td, name)
    return name.value


class _divisionquotienttimespan(Structure):
    _fields_ = [("quotient", c_long), ("remainder_in_ms", c_long)]


divideDatetimeDifferenceInSeconds = __mtime.divideDatetimeDifferenceInSeconds
divideDatetimeDifferenceInSeconds.argtype = [
    POINTER(_datetime),
    POINTER(_datetime),
    POINTER(_timedelta),
    POINTER(_divisionquotienttimespan),
]
divideDatetimeDifferenceInSeconds.restype = POINTER(_divisionquotienttimespan)


# @package mtime_event
#
# @brief Definition of the basic event type and its methods.
#
# @details
#
# @author  Luis Kornblueh, Max Planck Institute for Meteorology
# @author  Rahul Sinha, Max Planck Institute for Meteorology


# provides a string length for toString.
max_event_str_len = c_int(132).value


class _event(Structure):
    _fields_ = [
        ("nextEventInGroup", c_void_p),
        ("eventid", c_long),
        ("eventname", c_char_p),
        ("eventreferencedatetime", POINTER(_datetime)),
        ("eventfirstdatetime", POINTER(_datetime)),
        ("eventlastdatetime", POINTER(_datetime)),
        ("eventinterval", POINTER(_datetime)),
        ("triggercurrentevent", c_bool),
        ("nextEventIsFirst", c_bool),
        ("eventisFirstInDay", c_bool),
        ("eventisFirstInMonth", c_bool),
        ("eventisFirstInYear", c_bool),
        ("eventisLastInDay", c_bool),
        ("eventisLastInMonth", c_bool),
        ("eventisLastInYear", c_bool),
        ("triggernexteventdatetime", POINTER(_datetime)),
        ("triggeredpreviouseventdatetime", POINTER(_datetime)),
    ]


newEvent = __mtime.newEvent
newEvent.argtype = [c_char_p, c_char_p, c_char_p, c_char_p, c_char_p]
newEvent.restype = POINTER(_event)


deallocateEvent = __mtime.deallocateEvent
deallocateEvent.argtype = [POINTER(_event)]
deallocateEvent.restype = None


isCurrentEventActive = __mtime.isCurrentEventActive
isCurrentEventActive.argtype = [POINTER(_event), POINTER(_datetime)]
isCurrentEventActive.restype = c_bool

my_eventToString = __mtime.eventToString
my_eventToString.argtype = [POINTER(_event), c_char_p]
my_eventToString.restype = c_char_p


def eventToString(e):
    name = create_string_buffer(b" ", max_event_str_len)
    my_eventToString(e, name)
    return name.value


# @package mtime_eventgroup
#
# @brief Event-groups which contains a list of events.
#
# @details
#
# @author  Luis Kornblueh, Max Planck Institute for Meteorology
# @author  Rahul Sinha, Max Planck Institute for Meteorology


# provides a string length for toString
max_groupname_str_len = 132


class _eventgroup(Structure):
    _fields_ = [
        ("eventgroupid", c_int),
        ("eventgroupname", c_char_p),
        ("rootEvent", POINTER(_event)),
    ]


newEventGroup = __mtime.newEventGroup
newEventGroup.argtype = [c_char_p]
newEventGroup.restype = POINTER(_eventgroup)

deallocateEventGroup = __mtime.deallocateEventGroup
deallocateEventGroup.argtype = [POINTER(_eventgroup)]
deallocateEventGroup.restype = None

addNewEventToEventGroup = __mtime.addNewEventToEventGroup
addNewEventToEventGroup.argType = [POINTER(_event), POINTER(_eventgroup)]
addNewEventToEventGroup.resType = c_bool

removeEventFromEventGroup = __mtime.removeEventFromEventGroup
removeEventFromEventGroup.argType = [c_char_p, POINTER(_eventgroup)]
removeEventFromEventGroup.resType = c_bool
